Refactor AccountServiceImpl to use WebClient for API calls; enhance unit tests for default account retrieval and error handling with retry logic